--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-   name: vendetta-debug,
-   version: 3.0.0,
-   description: Provides a console for debugging Vendetta over a websocket.,
-   type: module,
-   author: Meqativ,
-   license: MIT,
-   dependencies: {
-      ansi-colors: ^4.1.3,
-      ws: ^8.13.0
+   "name": "vendetta-debug",
+   "version": "3.0.0",
+   "description": "Provides a console for debugging Vendetta over a websocket.",
+   "type": "module",
+   "author": "Meqativ",
+   "license": "MIT",
+   "dependencies": {
+      "ansi-colors": "^4.1.3",
+      "ws": "^8.13.0"
    },
-   optionalDependencies: {
-      command-line-usage: ^7.0.1
+   "optionalDependencies": {
+      "command-line-usage": "^7.0.1"
    }
 }
-
